--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run clean && npm run images && npm run styles && npm run elm && npm run html",
     "test": "elm-test test/TestRunner.elm",
     "tdd": "nodemon --watch './src/' --watch './test/' --ext js,elm --exec 'npm test'",
-    "clean": "rm -rf ./public/",
+    "clean": "rm -rf ./dist/",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
     "postinstall": "elm package install -y",
@@ -15,13 +15,13 @@
     "watch-styles": "nodemon --watch './src/styles/' --ext less --exec 'npm run styles-dev'",
     "watch-elm": "nodemon --watch './src/' --ext js,elm --exec 'npm run elm-dev'",
     "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
-    "images": "mkdir -p public && rsync -r --delete ./src/images/ ./public/images/",
-    "styles": "lessc --clean-css --autoprefix='last 2 versions' ./src/styles/app.less ./public/styles/app.css",
-    "styles-dev": "lessc --source-map --source-map-less-inline --clean-css --autoprefix='last 2 versions' ./src/styles/app.less ./public/styles/app.css",
-    "elm": "./scripts/build-elm-min.sh ./public/scripts/elm.js",
-    "elm-dev": "./scripts/build-elm.sh ./public/scripts/elm.js",
-    "html": "mkdir -p public && rsync ./src/index.html ./public/index.html",
-    "browser-sync": "mkdir -p public && cd public && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --server --files '**/*'"
+    "images": "mkdir -p dist && rsync -r --delete ./src/images/ ./dist/images/",
+    "styles": "lessc --clean-css --autoprefix='last 2 versions' ./src/styles/app.less ./dist/styles/app.css",
+    "styles-dev": "lessc --source-map --source-map-less-inline --clean-css --autoprefix='last 2 versions' ./src/styles/app.less ./dist/styles/app.css",
+    "elm": "./scripts/build-elm-min.sh ./dist/scripts/elm.js",
+    "elm-dev": "./scripts/build-elm.sh ./dist/scripts/elm.js",
+    "html": "mkdir -p dist && rsync ./src/index.html ./dist/index.html",
+    "browser-sync": "mkdir -p dist && cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --server --files '**/*'"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
