Integrate semantic-ui

--- a/package.json
+++ b/package.json
@@ -3,25 +3,22 @@
   "version": "0.1.2",
   "description": "Elm application boilerplate",
   "scripts": {
-    "start": "parallelshell \"npm run watch-images\" \"npm run watch-styles\" \"npm run watch-elm\" \"npm run watch-html\" \"npm run browser-sync\"",
-    "build": "npm run clean && npm run images && npm run styles && npm run elm && npm run html",
+    "start": "parallelshell 'npm run watch-styles' 'npm run watch-elm' 'npm run watch-html' 'npm run browser-sync'",
+    "build": "npm run clean && npm run styles && npm run elm && npm run html",
     "test": "elm-test test/TestRunner.elm",
-    "tdd": "nodemon --watch './src/' --watch './test/' --ext js,elm --exec 'npm test'",
+    "tdd": "nodemon --watch './src/' --watch './test/' --ext elm --exec 'npm test'",
     "clean": "rm -rf ./dist/",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
     "postinstall": "elm package install -y",
-    "watch-images": "nodemon --watch './src/images/' --ext png,jpg,gif,svg --exec 'npm run images'",
-    "watch-styles": "nodemon --watch './src/styles/' --ext less --exec 'npm run styles-dev'",
-    "watch-elm": "nodemon --watch './src/' --ext js,elm --exec 'npm run elm-dev'",
+    "watch-styles": "npm run styles && gulp watch",
+    "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm-dev'",
     "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
-    "images": "mkdir -p dist && rsync -r --delete ./src/images/ ./dist/images/",
-    "styles": "lessc --clean-css --autoprefix='last 2 versions' ./src/styles/app.less ./dist/styles/app.css",
-    "styles-dev": "lessc --source-map --source-map-less-inline --clean-css --autoprefix='last 2 versions' ./src/styles/app.less ./dist/styles/app.css",
-    "elm": "./scripts/build-elm-min.sh ./dist/scripts/elm.js",
-    "elm-dev": "./scripts/build-elm.sh ./dist/scripts/elm.js",
+    "styles": "gulp build && rsync ./node_modules/jquery/dist/jquery*.js ./dist/",
+    "elm": "./scripts/build-elm-min.sh ./dist/elm.js",
+    "elm-dev": "./scripts/build-elm.sh ./dist/elm.js",
     "html": "mkdir -p dist && rsync ./src/index.html ./dist/index.html",
-    "browser-sync": "mkdir -p dist && cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --server --files '**/*'"
+    "browser-sync": "mkdir -p dist && cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --server --files 'themes/**/*, *.js, *.css, *.html'"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
@@ -56,16 +53,14 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "less": "^2.6.0",
-    "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1",
+    "jquery": "^2.2.2",
     "map-stream": "0.0.6",
     "nodemon": "^1.8.1",
     "parallelshell": "^2.0.0",
     "require-dot-file": "^0.4.0",
     "run-sequence": "^1.1.5",
     "semantic-ui": "^2.1.8",
-    "uglify-js": "^2.6.1",
+    "uglify-js": "^2.6.2",
     "yamljs": "^0.2.6"
   }
 }
