Install elm packages on npm install
Also expose the locally installed `elm-repl` and `elm-package` commands.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "elm-test test/TestRunner.elm",
     "tdd": "nodemon --watch './src/' --watch './test/' --ext js,elm --exec 'npm test'",
     "clean": "rm -rf ./public/",
+    "elm-repl": "elm repl",
+    "elm-package": "elm package",
+    "postinstall": "elm package install -y",
     "watch-images": "nodemon --watch './src/images/' --ext png,jpg,gif,svg --exec 'npm run images'",
     "watch-styles": "nodemon --watch './src/styles/' --ext less --exec 'npm run styles-dev'",
     "watch-elm": "nodemon --watch './src/' --ext js,elm --exec 'npm run elm-dev'",
