Simplify the build and update README.md

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "elm-package": "elm package",
     "postinstall": "elm package install -y",
     "watch-styles": "npm run styles && gulp watch",
-    "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm-dev'",
+    "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm'",
     "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
     "styles": "gulp build && rsync ./node_modules/jquery/dist/jquery*.js ./dist/",
-    "elm": "./scripts/build-elm-min.sh ./dist/elm.js",
-    "elm-dev": "./scripts/build-elm.sh ./dist/elm.js",
-    "html": "mkdir -p dist && rsync ./src/index.html ./dist/index.html",
-    "browser-sync": "mkdir -p dist && cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --server --files 'themes/**/*, *.js, *.css, *.html'"
+    "elm": "elm make src/Main.elm --output ./dist/elm.js --warn",
+    "postelm": "uglifyjs ./dist/elm.js --screw-ie8 --compress 'warnings=false' --output ./dist/elm.min.js",
+    "prehtml": "mkdir -p dist",
+    "html": "rsync ./src/index.html ./dist/index.html",
+    "prebrowser-sync": "mkdir -p dist",
+    "browser-sync": "cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --server --files 'themes/**/*, *.js, *.css, *.html'"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
