Init and refresh the accordion automatically

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.2",
   "description": "Elm application boilerplate",
   "scripts": {
-    "start": "parallelshell 'npm run watch-styles' 'npm run watch-elm' 'npm run watch-html' 'npm run browser-sync'",
-    "build": "npm run clean && npm run styles && npm run elm && npm run html",
+    "start": "parallelshell 'npm run watch-styles' 'npm run watch-elm' 'npm run watch-scripts' 'npm run watch-html' 'npm run browser-sync'",
+    "build": "npm run clean && npm run styles && npm run elm && npm run scripts && npm run html",
     "test": "elm-test test/TestRunner.elm",
     "tdd": "nodemon --watch './src/' --watch './test/' --ext elm --exec 'npm test'",
     "clean": "rm -rf ./dist/",
@@ -13,10 +13,14 @@
     "postinstall": "elm package install -y",
     "watch-styles": "npm run styles && gulp watch",
     "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm'",
+    "watch-scripts": "nodemon --watch './src/scripts/' --ext js --exec 'npm run scripts'",
     "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
     "styles": "gulp build && rsync ./node_modules/jquery/dist/jquery*.js ./dist/",
     "elm": "elm make src/Main.elm --output ./dist/elm.js --warn",
-    "postelm": "uglifyjs ./dist/elm.js --screw-ie8 --compress 'warnings=false' --output ./dist/elm.min.js",
+    "postelm": "uglifyjs ./dist/elm.js --screw-ie8 --compress 'warnings=false' --mangle --output ./dist/elm.min.js",
+    "prescripts": "mkdir -p dist",
+    "scripts": "uglifyjs $(find ./src/scripts/ -type f -name '*.js') --screw-ie8 --beautify --output ./dist/scripts.js",
+    "postscripts": "uglifyjs ./dist/scripts.js --screw-ie8 --compress --mangle --output ./dist/scripts.min.js",
     "prehtml": "mkdir -p dist",
     "html": "rsync ./src/index.html ./dist/index.html",
     "prebrowser-sync": "mkdir -p dist",
