--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "elm-test test/TestRunner.elm",
     "tdd": "nodemon --watch './src/' --watch './test/' --ext elm --exec 'npm test'",
     "clean": "rm -rf ./dist/",
+    "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
+    "postversion": "git push && git push origin v${npm_package_version}",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
     "postinstall": "elm package install -y",
@@ -60,6 +62,7 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "jquery": "^2.2.2",
+    "json": "^9.0.3",
     "map-stream": "0.0.6",
     "nodemon": "^1.8.1",
     "parallelshell": "^2.0.0",
