Move ./src/scripts to ./scripts

--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "postinstall": "elm package install -y",
     "watch-styles": "npm run styles && gulp watch",
     "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm'",
-    "watch-scripts": "nodemon --watch './src/scripts/' --ext js --exec 'npm run scripts'",
+    "watch-scripts": "nodemon --watch './scripts/' --ext js --exec 'npm run scripts'",
     "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
     "styles": "gulp build && rsync ./node_modules/jquery/dist/jquery*.js ./dist/",
     "elm": "elm make src/Main.elm --output ./dist/elm.js --warn",
     "postelm": "uglifyjs ./dist/elm.js --screw-ie8 --compress 'warnings=false' --mangle --output ./dist/elm.min.js",
     "prescripts": "mkdir -p dist",
-    "scripts": "uglifyjs $(find ./src/scripts/ -type f -name '*.js') --screw-ie8 --beautify --output ./dist/scripts.js",
+    "scripts": "uglifyjs $(find ./scripts/ -type f -name '*.js') --screw-ie8 --beautify --output ./dist/scripts.js",
     "postscripts": "uglifyjs ./dist/scripts.js --screw-ie8 --compress --mangle --output ./dist/scripts.min.js",
     "prehtml": "mkdir -p dist",
     "html": "rsync ./src/index.html ./dist/index.html",
