--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.5",
   "description": "Elm application boilerplate",
   "scripts": {
-    "start": "parallelshell 'npm run watch-styles' 'npm run watch-elm' 'npm run watch-scripts' 'npm run watch-html' 'npm run browser-sync'",
-    "build": "npm run clean && npm run styles && npm run elm && npm run scripts && npm run html",
+    "start": "parallelshell 'npm run watch-styles' 'npm run watch-elm' 'npm run watch-scripts' 'npm run watch-website-config' 'npm run watch-website' 'npm run browser-sync'",
+    "build": "npm run clean && npm run styles && npm run elm && npm run scripts && npm run website",
     "test": "elm-test test/TestRunner.elm",
     "tdd": "nodemon --watch './src/' --watch './test/' --ext elm --exec 'npm test'",
-    "clean": "rm -rf ./dist/",
+    "clean": "rm -rf ./dist/ ./website/.cache",
     "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
     "postversion": "git push && git push origin v${npm_package_version}",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
-    "postinstall": "elm package install -y",
+    "postinstall": "elm package install -y && cd website && stack setup",
     "watch-styles": "npm run styles && gulp watch",
     "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm'",
     "watch-scripts": "nodemon --watch './scripts/' --ext js --exec 'npm run scripts'",
-    "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
+    "watch-website-config": "nodemon --watch './website/' --ext hs --ignore '/.*' --exec 'npm run website'",
+    "watch-website": "cd website && nodemon --watch '.' --ext rst,markdown,html,png,svg,jpg,gif --ignore '/.*' --on-change-only --exec 'stack exec site build'",
     "styles": "gulp build && rsync ./node_modules/jquery/dist/jquery*.js ./dist/",
     "elm": "elm make src/Main.elm --output ./dist/elm.js --warn",
     "postelm": "uglifyjs ./dist/elm.js --screw-ie8 --compress 'warnings=false' --mangle --output ./dist/elm.min.js",
     "prescripts": "mkdir -p dist",
     "scripts": "uglifyjs $(find ./scripts/ -type f -name '*.js') --screw-ie8 --beautify --output ./dist/scripts.js",
     "postscripts": "uglifyjs ./dist/scripts.js --screw-ie8 --compress --mangle --output ./dist/scripts.min.js",
-    "prehtml": "mkdir -p dist",
-    "html": "rsync ./src/index.html ./dist/index.html",
+    "website": "cd website && rm -rf .cache && stack build && stack exec site build",
     "prebrowser-sync": "mkdir -p dist",
-    "browser-sync": "cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --reload-debounce 2500 --server --files 'themes/**/*, *.js, *.css, *.html'"
+    "browser-sync": "cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --reload-debounce 2500 --server --files '**/*, !components/**/*'"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
