--- a/package.json
+++ b/package.json
@@ -3,30 +3,36 @@
   "version": "0.1.5",
   "description": "Elm application boilerplate",
   "scripts": {
-    "start": "parallelshell 'npm run watch-styles' 'npm run watch-elm' 'npm run watch-scripts' 'npm run watch-html' 'npm run browser-sync'",
-    "build": "npm run clean && npm run styles && npm run elm && npm run scripts && npm run html",
+    "~~~PUBLIC~~~": "",
+    "start": "mkdir -p dist && npm-run-all -p 'watch:*' serve",
+    "build": "mkdir -p dist && npm-run-all clean -p 'build:*'",
     "test": "elm-test test/TestRunner.elm",
-    "tdd": "nodemon --watch './src/' --watch './test/' --ext elm --exec 'npm test'",
+    "tdd": "nodemon --watch 'src/' --watch 'test/' --ext elm --exec 'npm test'",
     "clean": "rm -rf dist .semantic",
-    "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
-    "postversion": "git push && git push origin v${npm_package_version}",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
+    "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
+    "postversion": "git push && git push origin v${npm_package_version}",
     "postinstall": "elm package install -y",
-    "watch-styles": "npm run styles && gulp watch",
-    "watch-elm": "nodemon --watch './src/' --ext elm --exec 'npm run elm'",
-    "watch-scripts": "nodemon --watch './scripts/' --ext js --exec 'npm run scripts'",
-    "watch-html": "nodemon --watch './src/' --ext html --exec 'npm run html'",
-    "styles": "gulp build && rsync ./node_modules/jquery/dist/jquery*.js ./dist/",
-    "elm": "elm make src/Main.elm --output ./dist/elm.js --warn",
-    "postelm": "uglifyjs ./dist/elm.js --screw-ie8 --compress 'warnings=false' --mangle --output ./dist/elm.min.js",
-    "prescripts": "mkdir -p dist",
-    "scripts": "uglifyjs $(find ./scripts/ -type f -name '*.js') --screw-ie8 --beautify --output ./dist/scripts.js",
-    "postscripts": "uglifyjs ./dist/scripts.js --screw-ie8 --compress --mangle --output ./dist/scripts.min.js",
-    "prehtml": "mkdir -p dist",
-    "html": "rsync ./src/index.html ./dist/index.html",
-    "prebrowser-sync": "mkdir -p dist",
-    "browser-sync": "cd dist && browser-sync start --no-ghost-mode --no-open --reload-delay 250 --reload-debounce 2500 --server --files '**/*'"
+    "serve": "mkdir -p dist && cd dist && browser-sync start --no-notify --no-ghost-mode --no-open --reload-delay 1000 --server --files 'themes/**/*, *.min.js, *.min.css, *.html'",
+    "~~~WATCH~~~": "Rebuild app on code change",
+    "watch:styles": "npm run build:styles && gulp watch",
+    "watch:elm": "nodemon --watch 'src/' --ext elm --exec 'npm run build:elm'",
+    "watch:js": "npm run build:js:vendor && nodemon --watch 'scripts/' --ext js --exec 'npm run build:js:app'",
+    "watch:html": "nodemon --watch 'html/' --ext html --exec 'npm run build:html'",
+    "~~~BUILD JAVASCRIPT~~~": "",
+    "build:js": "npm-run-all -p 'build:js:*'",
+    "build:js:app": "browserify -e scripts/main.js -t uglifyify --debug | exorcist dist/scripts.min.map > dist/scripts.min.js",
+    "build:js:vendor": "npm-run-all -p 'build:js:vendor:*'",
+    "build:js:vendor:jquery": "rsync --exclude '*slim*' node_modules/jquery/dist/jquery.* dist/",
+    "postbuild:js:vendor:jquery": "echo '//# sourceMappingURL=jquery.min.map' >> dist/jquery.min.js",
+    "~~~BUILD STYLES~~~": "Semantic UI",
+    "build:styles": "gulp build",
+    "~~~BUILD ELM~~~": "",
+    "build:elm": "elm make src/Main.elm --output dist/elm.js --warn",
+    "postbuild:elm": "cd dist && uglifyjs elm.js --screw-ie8 --compress 'warnings=false' --mangle --source-map elm.min.map --output elm.min.js",
+    "~~~BUILD HTML~~~": "",
+    "build:html": "html-minifier --config-file html-minifier.conf --output dist/index.html html/index.html"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
@@ -34,9 +40,11 @@
   "devDependencies": {
     "better-console": "^0.2.4",
     "browser-sync": "^2.11.1",
+    "browserify": "^13.0.0",
     "del": "^2.2.0",
     "elm": "^0.16.0",
     "elm-test": "^0.16.0",
+    "exorcist": "^0.4.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -61,15 +69,17 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "html-minifier": "^1.4.0",
     "jquery": "^2.2.2",
     "json": "^9.0.3",
     "map-stream": "0.0.6",
     "nodemon": "^1.8.1",
-    "parallelshell": "^2.0.0",
+    "npm-run-all": "^1.7.0",
     "require-dot-file": "^0.4.0",
     "run-sequence": "^1.1.5",
     "semantic-ui": "^2.1.8",
     "uglify-js": "^2.6.2",
+    "uglifyify": "^3.0.1",
     "yamljs": "^0.2.6"
   }
 }
