--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "repository": "gkubisa/elm-app-boilerplate",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
     "elm": "^0.16.0",
     "elm-hot-loader": "^0.2.2",
