--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
@@ -30,6 +31,8 @@
     "elm-hot-loader": "^0.2.2",
     "elm-test": "^0.16.0",
     "elm-webpack-loader": "^2.0.1",
+    "eslint": "^2.7.0",
+    "eslint-loader": "^1.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.15.0",
