Add JavaScript tests

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
     "build": "npm run clean && webpack -p --bail",
-    "test": "elm-test elm-test/TestRunner.elm",
-    "tdd": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm test'",
+    "test": "npm-run-all -p 'test:*'",
+    "test:elm": "elm-test elm-test/TestRunner.elm",
+    "test:js": "karma start --single-run",
+    "tdd": "npm-run-all -p 'tdd:*'",
+    "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
+    "tdd:js": "karma start",
     "clean": "rm -rf dist",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
@@ -26,6 +30,7 @@
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "elm": "^0.16.0",
     "elm-hot-loader": "^0.2.2",
@@ -36,13 +41,29 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.15.0",
+    "isparta-loader": "^2.0.0",
     "jquery": "^2.2.2",
     "json": "^9.0.3",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-coverage": "^0.5.5",
+    "karma-dirty-chai": "justin-lau/karma-dirty-chai#0d993f5a7add46299eb217429e5fcaa115528279",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "mocha": "^2.4.5",
     "nodemon": "^1.8.1",
+    "npm-run-all": "^1.7.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
     "semantic-ui-less": "^2.1.8",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
