--- a/.editorconfig
+++ b/.editorconfig
@@ -10,10 +10,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,html,less,elm,md}]
+[*.{js,html,less,elm,md,conf}]
 indent_style = space
 indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
-
