--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "tdd": "npm-run-all -p 'tdd:*'",
     "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
     "tdd:js": "karma start",
+    "docker-build": "docker build -t gkubisa/elm-app-boilerplate .",
+    "docker-run": "docker run --name elm-app-boilerplate -d -p 8081:80 gkubisa/elm-app-boilerplate",
+    "docker-start": "docker start elm-app-boilerplate",
+    "docker-stop": "docker stop elm-app-boilerplate",
+    "docker-rm": "docker rm elm-app-boilerplate",
     "clean": "rm -rf dist",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
