--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "tdd": "npm-run-all -p 'tdd:*'",
     "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
     "tdd:js": "karma start",
-    "docker-build": "docker build -t gkubisa/elm-app-boilerplate .",
+    "docker-build": "docker build -t gkubisa/elm-app-boilerplate . && docker tag gkubisa/elm-app-boilerplate gkubisa/elm-app-boilerplate:${npm_package_version}",
     "docker-run": "docker run --name elm-app-boilerplate -d -p 8081:80 gkubisa/elm-app-boilerplate",
     "docker-start": "docker start elm-app-boilerplate",
     "docker-stop": "docker stop elm-app-boilerplate",
     "docker-rm": "docker rm elm-app-boilerplate",
+    "docker-push": "docker push gkubisa/elm-app-boilerplate && docker push gkubisa/elm-app-boilerplate:${npm_package_version}",
+    "release": "npm run build && npm run docker-build && npm run docker-push",
     "clean": "rm -rf dist",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
