--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "elm-hot-loader": "^0.2.2",
     "elm-test": "^0.16.0",
     "elm-webpack-loader": "^2.0.1",
-    "eslint": "^2.7.0",
+    "eslint": "~2.9.0",
     "eslint-loader": "^1.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
