--- a/shippable.yml
+++ b/shippable.yml
@@ -7,6 +7,7 @@ build:
   ci:
     - npm prune
     - shippable_retry npm install --unsafe-perm
+    - shippable_retry npm update --unsafe-perm
     - npm test
 
   post_ci:
