--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
     "build": "npm run clean && webpack -p --bail",
-    "test": "npm-run-all -p 'test:*'",
-    "test:elm": "elm-test elm-test/TestRunner.elm --compiler ./node_modules/.bin/elm-make",
+    "test": "run-p 'test:*'",
+    "test:elm": "FILE=$(mktemp --suffix '.js') && elm-make elm-test/TestRunner.elm --output $FILE && node $FILE; RESULT=$?; rm -f $FILE; exit $RESULT",
     "test:js": "karma start --single-run",
-    "tdd": "npm-run-all -p 'tdd:*'",
+    "tdd": "run-p 'tdd:*'",
     "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
     "tdd:js": "karma start",
     "docker-build": "docker build -t gkubisa/elm-app-boilerplate .",
@@ -17,15 +17,16 @@
     "docker-stop": "docker stop elm-app-boilerplate",
     "docker-rm": "docker rm elm-app-boilerplate",
     "docker-push": "docker push gkubisa/elm-app-boilerplate",
-    "prerelease": "npm run build && npm run docker-build && npm run docker-push",
+    "prerelease": "run-s build docker-build docker-push",
     "release": "docker tag gkubisa/elm-app-boilerplate gkubisa/elm-app-boilerplate:${npm_package_version} && docker push gkubisa/elm-app-boilerplate:${npm_package_version}",
     "clean": "rm -rf dist",
+    "elm": "elm",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
     "elm-reactor": "elm reactor",
     "elm-make": "elm make",
-    "elm-test": "elm test",
-    "preversion": "npm test",
+    "ncu": "ncu --error-level 2 --reject elm-webpack-loader",
+    "preversion": "run-s ncu test",
     "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
     "postversion": "git push && git push origin v${npm_package_version}",
     "postinstall": "rsync -r node_modules/semantic-ui-less/themes node_modules/semantic-ui-less/definitions node_modules/semantic-ui-less/theme.less node_modules/semantic-ui-less/semantic.less styles/ && find styles -type f -exec chmod -x {} \\; && elm package install -y"
@@ -35,47 +36,48 @@
   "repository": "gkubisa/elm-app-boilerplate",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
-    "elm": "^0.16.0",
-    "elm-hot-loader": "^0.2.2",
-    "elm-test": "^0.16.0",
-    "elm-webpack-loader": "^2.0.1",
-    "eslint": "~2.9.0",
+    "dirty-chai": "^1.2.2",
+    "elm": "^0.17.0",
+    "elm-hot-loader": "^0.3.2",
+    "elm-webpack-loader": "3.0.0",
+    "eslint": "~2.10.2",
     "eslint-loader": "^1.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.15.0",
+    "html-webpack-plugin": "^2.17.0",
     "isparta-loader": "^2.0.0",
-    "jquery": "^2.2.2",
+    "jquery": "^2.2.4",
     "json": "^9.0.3",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chai-sinon": "^0.1.5",
-    "karma-coverage": "^0.5.5",
+    "karma-coverage": "^1.0.0",
     "karma-dirty-chai": "justin-lau/karma-dirty-chai#0d993f5a7add46299eb217429e5fcaa115528279",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.3",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "less": "^2.6.1",
+    "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
-    "nodemon": "^1.8.1",
-    "npm-run-all": "^1.7.0",
+    "nodemon": "^1.9.2",
+    "npm-check-updates": "^2.6.5",
+    "npm-run-all": "^2.1.1",
     "phantomjs-prebuilt": "^2.1.7",
-    "postcss-loader": "^0.8.2",
+    "postcss-loader": "^0.9.1",
     "semantic-ui-less": "^2.1.8",
-    "sinon": "^1.17.3",
+    "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
