--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "elm-package": "elm package",
     "elm-reactor": "elm reactor",
     "elm-make": "elm make",
-    "ncu": "ncu --error-level 2 --reject elm-webpack-loader",
-    "preversion": "run-s ncu test",
+    "ncu": "ncu",
+    "preversion": "run-s 'ncu -- --error-level 2' test",
     "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
     "postversion": "git push && git push origin v${npm_package_version}",
     "postinstall": "rsync -r node_modules/semantic-ui-less/themes node_modules/semantic-ui-less/definitions node_modules/semantic-ui-less/theme.less node_modules/semantic-ui-less/semantic.less styles/ && find styles -type f -exec chmod -x {} \\; && elm package install -y"
@@ -45,7 +45,7 @@
     "dirty-chai": "^1.2.2",
     "elm": "^0.17.0",
     "elm-hot-loader": "^0.3.2",
-    "elm-webpack-loader": "3.0.0",
+    "elm-webpack-loader": "3.0.3",
     "eslint": "~2.10.2",
     "eslint-loader": "^1.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -66,7 +66,7 @@
     "karma-webpack": "^1.7.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.2",
     "nodemon": "^1.9.2",
     "npm-check-updates": "^2.6.5",
     "npm-run-all": "^2.1.1",
