--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   "license": "MIT",
   "repository": "gkubisa/elm-app-boilerplate",
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.11.4",
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.13.2",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "dirty-chai": "^1.2.2",
@@ -58,21 +58,21 @@
     "karma-chai": "^0.1.0",
     "karma-chai-sinon": "^0.1.5",
     "karma-coverage": "^1.1.1",
-    "karma-dirty-chai": "justin-lau/karma-dirty-chai#0d993f5a7add46299eb217429e5fcaa115528279",
+    "karma-dirty-chai": "^1.0.2",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^1.8.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "mocha": "^3.0.0",
-    "node-elm-compiler": "gkubisa/node-elm-compiler#8098094ab3ddcbcdbcbceaeb33bd1b1d620eb5f2",
+    "mocha": "^3.0.2",
+    "node-elm-compiler": "^4.1.0",
     "nodemon": "^1.10.0",
     "normalize.css": "^4.2.0",
     "npm-check-updates": "^2.8.0",
     "npm-run-all": "^2.3.0",
-    "phantomjs-prebuilt": "^2.1.9",
+    "phantomjs-prebuilt": "^2.1.11",
     "postcss-loader": "^0.9.1",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
