--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack-dev-server --hot --inline",
     "build": "npm run clean && webpack -p --bail",
     "test": "run-p 'test:*'",
-    "test:elm": "FILE=$(mktemp --suffix '.js') && elm-make elm-test/TestRunner.elm --output $FILE && node -r ./js/workaround-elm-test-and-navigation.js $FILE; RESULT=$?; rm -f $FILE; exit $RESULT",
+    "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make --module TestRunner elm-test/TestRunner.elm",
     "test:js": "karma start --single-run",
     "tdd": "run-p 'tdd:*'",
     "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
@@ -25,6 +25,7 @@
     "elm-package": "elm package",
     "elm-reactor": "elm reactor",
     "elm-make": "elm make",
+    "elm-test": "elm test",
     "ncu": "ncu",
     "preversion": "run-s 'ncu -- --error-level 2' test",
     "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
@@ -45,6 +46,7 @@
     "dirty-chai": "^1.2.2",
     "elm": "^0.17.1",
     "elm-hot-loader": "^0.3.3",
+    "elm-test": "bdukes/node-test-runner#9f0e4049e885e96e1a903f1516a24c26a173d529",
     "elm-webpack-loader": "3.0.3",
     "eslint": "~3.2.2",
     "eslint-loader": "^1.5.0",
