Update node dependencies
[reset minion] - clears Shippable cache

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack-dev-server --hot --inline",
     "build": "npm run clean && webpack -p --bail",
     "test": "run-p 'test:*'",
-    "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make --module TestRunner elm-test/TestRunner.elm",
+    "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make elm-test/TestRunner.elm",
     "test:js": "karma start --single-run",
     "tdd": "run-p 'tdd:*'",
     "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
@@ -36,19 +36,19 @@
   "license": "MIT",
   "repository": "gkubisa/elm-app-boilerplate",
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.13.2",
+    "autoprefixer": "^6.4.1",
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "dirty-chai": "^1.2.2",
     "elm": "^0.17.1",
-    "elm-hot-loader": "^0.3.3",
-    "elm-test": "bdukes/node-test-runner#9f0e4049e885e96e1a903f1516a24c26a173d529",
-    "elm-webpack-loader": "3.0.3",
-    "eslint": "~3.2.2",
+    "elm-hot-loader": "^0.3.4",
+    "elm-test": "^0.17.3",
+    "elm-webpack-loader": "^3.0.6",
+    "eslint": "^3.5.0",
     "eslint-loader": "^1.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -56,31 +56,31 @@
     "isparta-loader": "^2.0.0",
     "jquery": "^3.1.0",
     "json": "^9.0.4",
-    "karma": "^1.1.2",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chai-sinon": "^0.1.5",
     "karma-coverage": "^1.1.1",
     "karma-dirty-chai": "^1.0.2",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.1.0",
-    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^3.0.2",
-    "node-elm-compiler": "^4.1.0",
-    "nodemon": "^1.10.0",
+    "node-elm-compiler": "^4.1.4",
+    "nodemon": "^1.10.2",
     "normalize.css": "^4.2.0",
     "npm-check-updates": "^2.8.0",
-    "npm-run-all": "^2.3.0",
-    "phantomjs-prebuilt": "^2.1.11",
-    "postcss-loader": "^0.9.1",
+    "npm-run-all": "^3.1.0",
+    "phantomjs-prebuilt": "^2.1.12",
+    "postcss-loader": "^0.13.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   }
 }
