--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["es2015"]
+  "presets": ["es2015"],
+  "env": {
+    "test": {
+      "plugins": [
+        [
+          "istanbul", {
+            "include": [
+              "js/"
+            ]
+          }
+        ]
+      ]
+    }
+  }
 }
