--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "npm run clean && webpack -p --bail",
     "test": "run-p 'test:*'",
     "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make elm-test/TestRunner.elm",
-    "test:js": "karma start --single-run",
+    "test:js": "cross-env NODE_ENV=test karma start --single-run",
     "tdd": "run-p 'tdd:*'",
     "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
-    "tdd:js": "karma start",
+    "tdd:js": "cross-env NODE_ENV=test karma start",
     "docker-build": "docker build -t gkubisa/elm-app-boilerplate .",
     "docker-run": "docker run --name elm-app-boilerplate -d -p 8081:80 gkubisa/elm-app-boilerplate",
     "docker-start": "docker start elm-app-boilerplate",
@@ -40,8 +40,10 @@
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-istanbul": "^2.0.1",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "cross-env": "^2.0.1",
     "css-loader": "^0.25.0",
     "dirty-chai": "^1.2.2",
     "elm": "^0.17.1",
@@ -53,7 +55,6 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "isparta-loader": "^2.0.0",
     "jquery": "^3.1.0",
     "json": "^9.0.4",
     "karma": "^1.3.0",
