--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "dirty-chai": "^1.2.2",
+    "dotenv": "^2.0.0",
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.5.4",
     "elm-test": "^0.18.2",
