--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-stable-module-id-and-hash": "^1.0.5"
   }
 }
