Move elm-test/ to elm/
Keep the code and the corresponding tests together

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "webpack-dev-server --hot --inline",
     "build": "npm run clean && webpack -p --bail",
     "test": "run-p 'test:*'",
-    "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make elm-test/TestRunner.elm",
+    "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make elm/TestRunner.elm",
     "test:js": "cross-env NODE_ENV=test karma start --single-run",
     "tdd": "run-p 'tdd:*'",
-    "tdd:elm": "nodemon --watch 'elm/' --watch 'elm-test/' --ext elm --exec 'npm run test:elm'",
+    "tdd:elm": "nodemon --watch 'elm/' --ext elm --exec 'npm run test:elm'",
     "tdd:js": "cross-env NODE_ENV=test karma start",
     "clean": "rm -rf dist elm-stuff/build-artifacts",
     "elm": "elm",
