--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,10 @@
           "istanbul", {
             "include": [
               "js/"
+            ],
+            "exclude": [
+              "**/tests.js",
+              "**/*.test.js"
             ]
           }
         ]
