--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "dirty-chai": "^1.2.2",
     "dotenv": "^4.0.0",
     "elm": "^0.18.0",
+    "elm-css": "^0.6.0",
+    "elm-css-webpack-loader": "^2.0.2",
     "elm-hot-loader": "^0.5.4",
     "elm-test": "^0.18.2",
     "elm-webpack-loader": "^4.1.1",
