--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Elm application boilerplate",
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
-    "build": "npm run clean && webpack -p --bail",
+    "build": "webpack -p --bail",
     "test": "run-p 'test:*'",
     "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make elm/TestRunner.elm",
     "test:js": "cross-env NODE_ENV=test karma start --single-run",
@@ -35,23 +35,23 @@
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.3",
     "dirty-chai": "^1.2.2",
     "dotenv": "^4.0.0",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
-    "elm-css-webpack-loader": "^2.0.2",
+    "elm-css-webpack-loader": "^3.1.0",
     "elm-hot-loader": "^0.5.4",
     "elm-test": "^0.18.2",
     "elm-webpack-loader": "^4.1.1",
     "eslint": "^3.13.0",
     "eslint-loader": "^1.6.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.26.0",
     "json": "^9.0.4",
     "karma": "^1.3.0",
@@ -63,20 +63,20 @@
     "karma-mocha-reporter": "^2.2.1",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.1",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.2.0",
     "node-elm-compiler": "^4.2.1",
     "nodemon": "^1.11.0",
+    "noop-loader": "^1.0.0",
     "npm-check-updates": "^2.8.9",
     "npm-run-all": "^4.0.0",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-loader": "^1.2.1",
-    "sinon": "^1.17.7",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-stable-module-id-and-hash": "^1.0.5"
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   }
 }
