--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,13 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,html,less,elm,md,conf,yml}]
+[*.{js,html,less,md,conf,yml}]
 indent_style = space
 indent_size = 2
+
+[*.elm]
+indent_style = space
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
