--- a/package.json
+++ b/package.json
@@ -31,27 +31,27 @@
     "node": ">= 6.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.18.0",
-    "chai": "^3.5.0",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.27.3",
-    "dirty-chai": "^1.2.2",
+    "chai": "^4.1.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.5",
+    "dirty-chai": "^2.0.1",
     "dotenv": "^4.0.0",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
-    "elm-css-webpack-loader": "^3.1.0",
+    "elm-css-webpack-loader": "gkubisa/elm-css-webpack-loader#aaecfd7051831ace2bdc9c7ce3171f8977f755dd",
     "elm-hot-loader": "^0.5.4",
     "elm-test": "^0.18.2",
     "elm-webpack-loader": "^4.1.1",
-    "eslint": "^3.13.0",
+    "eslint": "^4.5.0",
     "eslint-loader": "^1.6.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.26.0",
     "json": "^9.0.4",
     "karma": "^1.3.0",
@@ -71,12 +71,12 @@
     "npm-check-updates": "^2.8.9",
     "npm-run-all": "^4.0.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "postcss-loader": "^1.2.1",
-    "sinon": "^2.1.0",
+    "postcss-loader": "^2.0.6",
+    "sinon": "^3.2.1",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.7",
-    "webpack": "^2.3.2",
+    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.4.2"
   }
 }
