--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "webpack-dev-server --hot --inline",
     "build": "webpack -p --bail",
     "test": "run-p 'test:*'",
-    "test:elm": "elm test --warn --compiler node_modules/.bin/elm-make elm/TestRunner.elm",
+    "test:elm": "elm test --warn",
     "test:js": "cross-env NODE_ENV=test karma start --single-run",
     "tdd": "run-p 'tdd:*'",
-    "tdd:elm": "nodemon --watch 'elm/' --ext elm --exec 'npm run test:elm'",
+    "tdd:elm": "elm test --watch --warn",
     "tdd:js": "cross-env NODE_ENV=test karma start",
-    "clean": "rm -rf dist elm-stuff/build-artifacts",
+    "clean": "rm -rf dist elm-stuff/build-artifacts tests/elm-stuff/build-artifacts",
     "elm": "elm",
     "elm-repl": "elm repl",
     "elm-package": "elm package",
@@ -20,9 +20,9 @@
     "elm-test": "elm test",
     "ncu": "ncu",
     "preversion": "run-s 'ncu -- --error-level 2' test",
-    "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json",
+    "version": "json -4 -I -f elm-package.json -e \"this.version='${npm_package_version}'\" && json -4 -I -f tests/elm-package.json -e \"this.version='${npm_package_version}'\" && git add elm-package.json tests/elm-package.json",
     "postversion": "git push && git push origin v${npm_package_version}",
-    "postinstall": "elm package install -y"
+    "postinstall": "elm package install -y && cd tests && elm package install -y"
   },
   "author": "Greg Kubisa <gkubisa@gmail.com>",
   "license": "MIT",
