Install test packages before running tests

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "webpack-dev-server --hot --inline",
     "build": "webpack -p --bail",
     "test": "run-p 'test:*'",
+    "pretest:elm": "cd tests && elm package install -y",
     "test:elm": "elm test --warn",
     "test:js": "cross-env NODE_ENV=test karma start --single-run",
     "tdd": "run-p 'tdd:*'",
+    "pretdd:elm": "cd tests && elm package install -y",
     "tdd:elm": "elm test --watch --warn",
     "tdd:js": "cross-env NODE_ENV=test karma start",
     "clean": "rm -rf dist elm-stuff/build-artifacts tests/elm-stuff/build-artifacts",
