--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.5",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
